# rwcord

./: Cargo.toml  README.md
examples/: connect.rs  embed.rs
src/: context.rs  http.rs  lib.rs  main.rs  message.rs
src/discord/: embed.rs  message.rs  mod.rs  user.rs
src/http/: client.rs  mod.rs  rate_limit.rs  request.rs
