[package]
name = "rwcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
async-trait = "0.1.52"
serde_json = "1.0.74"

[dependencies.tokio-tungstenite]
version = "0.16.1"
features = ["native-tls"]

[dependencies.tokio]
version = "1.15.0"
features = ["full"]
